# resist

./: README.md  justfile  pyproject.toml
resist/src/game/: main.py
src/game/: main.py
